[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = ""
authors = ["dmota-ri"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.0"
# requests = "^2.31"


# curl -sSL https://install.python-poetry.org | python3 -
# or
# pip install --user poetry

# echo 'export PATH="$HOME/.local/bin:$PATH"' >> ~/.bashrc
# source ~/.bashrc

# check
# poetry --version

# use
# poetry run python loading.py
